--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: kitapp
+name: flutterfoodapp
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -23,8 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  easy_localization: ^2.3.3
+  provider: ^4.3.2+1
+  google_fonts: ^1.1.0
+  shared_preferences: ^0.5.7+3
+  dio: ^3.0.10
+  lottie: ^0.6.0
+  circular_check_box: ^1.0.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
@@ -45,8 +50,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/lang/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
