--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,12 @@ dependencies:
   shared_preferences: ^0.5.7+3
   dio: ^3.0.10
   lottie: ^0.6.0
-  auto_size_text: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   flutter_rating_bar: 3.0.1+1
+  flutter_svg: 0.19.0
 
   flutter_barcode_scanner: ^1.0.1
 
@@ -60,7 +60,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/lang/
-
     - assets/images/onBoarding1.png
     - assets/images/onBoarding2.png
     - assets/images/onBoarding3.png
