--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   flutter_rating_bar: 3.0.1+1
   flutter_svg: 0.19.0
+  curved_navigation_bar: ^0.3.4
 
   flutter_barcode_scanner: ^1.0.1
 
