--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
     sdk: flutter
   easy_localization: ^2.3.3
   provider: ^4.3.2+1
+
+
+  curved_navigation_bar: ^0.3.4 
   google_fonts: ^1.1.0
   shared_preferences: ^0.5.7+3
   dio: ^3.0.10
