--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,13 @@ dependencies:
   dio: ^3.0.10
   lottie: ^0.6.0
   flutter_svg: ^0.19.0
+  flappy_search_bar: ^1.4.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   flutter_rating_bar: 3.0.1+1
-
   circular_check_box: ^1.0.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
