--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,19 +37,16 @@ dependencies:
   cupertino_icons: ^0.1.3
   flutter_rating_bar: 3.0.1+1
 
-
-  
   curved_navigation_bar: ^0.3.4
   flutter_beautiful_popup: ^1.5.0
-  
 
   flutter_barcode_scanner: ^1.0.1
 
   line_awesome_flutter: ^1.0.1
 
-
-  
   auto_size_text: ^2.1.0
+  circular_check_box: ^1.0.4
+  flutter_svg: ^0.19.0
 
 dev_dependencies:
   flutter_test:
